scss: Fix "current city" alignment (city choice menu)

--- a/core/static/css/src/base/_site-header.scss
+++ b/core/static/css/src/base/_site-header.scss
@@ -132,6 +132,7 @@
 
         .dropdown-toggle {
             @extend .nav-link;
+            display: flex;
             padding: 0;
 
             &::after {
